add basic structure and some error handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql:///fetch
 #spring.jpa.properties.hibernate.dialect=PostgreSQL10Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.springframework.security=DEBUG
 
 app.jwt-secret=JWTSecretKey
