--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.datasource.url=jdbc:postgresql:///fetch
+#spring.datasource.url=jdbc:postgresql:///fetchdb
 #spring.jpa.properties.hibernate.dialect=PostgreSQL10Dialect
 spring.datasource.url=jdbc:h2:mem:fetchdb
 spring.datasource.driverClassName=org.h2.Driver
